packages/vector-store/src/filter/antlr4/FiltersParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { FiltersListener } from "./FiltersListener.js";
import { FiltersVisitor } from "./FiltersVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


/*
 * Copyright 2023-2023 the original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// ############################################################
// # NOTE: This is ANTLR4 auto-generated code. Do not modify! #
// ############################################################


export class FiltersParser extends antlr.Parser {
    public static readonly LONG_SUFFIX = 1;
    public static readonly WHERE = 2;
    public static readonly DOT = 3;
    public static readonly COMMA = 4;
    public static readonly LEFT_SQUARE_BRACKETS = 5;
    public static readonly RIGHT_SQUARE_BRACKETS = 6;
    public static readonly LEFT_PARENTHESIS = 7;
    public static readonly RIGHT_PARENTHESIS = 8;
    public static readonly EQUALS = 9;
    public static readonly MINUS = 10;
    public static readonly PLUS = 11;
    public static readonly GT = 12;
    public static readonly GE = 13;
    public static readonly LT = 14;
    public static readonly LE = 15;
    public static readonly NE = 16;
    public static readonly AND = 17;
    public static readonly OR = 18;
    public static readonly IN = 19;
    public static readonly NIN = 20;
    public static readonly NOT = 21;
    public static readonly IS = 22;
    public static readonly NULL = 23;
    public static readonly BOOLEAN_VALUE = 24;
    public static readonly QUOTED_STRING = 25;
    public static readonly INTEGER_VALUE = 26;
    public static readonly DECIMAL_VALUE = 27;
    public static readonly IDENTIFIER = 28;
    public static readonly WS = 29;
    public static readonly RULE_where = 0;
    public static readonly RULE_booleanExpression = 1;
    public static readonly RULE_constantArray = 2;
    public static readonly RULE_compare = 3;
    public static readonly RULE_identifier = 4;
    public static readonly RULE_constant = 5;

    public static readonly literalNames = [
        null, null, null, "'.'", "','", "'['", "']'", "'('", "')'", "'=='", 
        "'-'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='"
    ];

    public static readonly symbolicNames = [
        null, "LONG_SUFFIX", "WHERE", "DOT", "COMMA", "LEFT_SQUARE_BRACKETS", 
        "RIGHT_SQUARE_BRACKETS", "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", 
        "EQUALS", "MINUS", "PLUS", "GT", "GE", "LT", "LE", "NE", "AND", 
        "OR", "IN", "NIN", "NOT", "IS", "NULL", "BOOLEAN_VALUE", "QUOTED_STRING", 
        "INTEGER_VALUE", "DECIMAL_VALUE", "IDENTIFIER", "WS"
    ];
    public static readonly ruleNames = [
        "where", "booleanExpression", "constantArray", "compare", "identifier", 
        "constant",
    ];

    public get grammarFileName(): string { return "Filters.g4"; }
    public get literalNames(): (string | null)[] { return FiltersParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return FiltersParser.symbolicNames; }
    public get ruleNames(): string[] { return FiltersParser.ruleNames; }
    public get serializedATN(): number[] { return FiltersParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, FiltersParser._ATN, FiltersParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public where(): WhereContext {
        let localContext = new WhereContext(this.context, this.state);
        this.enterRule(localContext, 0, FiltersParser.RULE_where);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 12;
            this.match(FiltersParser.WHERE);
            this.state = 13;
            this.booleanExpression(0);
            this.state = 14;
            this.match(FiltersParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public booleanExpression(): BooleanExpressionContext;
    public booleanExpression(_p: number): BooleanExpressionContext;
    public booleanExpression(_p?: number): BooleanExpressionContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new BooleanExpressionContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 2;
        this.enterRecursionRule(localContext, 2, FiltersParser.RULE_booleanExpression, _p);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 48;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
            case 1:
                {
                localContext = new CompareExpressionContext(localContext);
                this.context = localContext;
                previousContext = localContext;

                this.state = 17;
                this.identifier();
                this.state = 18;
                this.compare();
                this.state = 19;
                this.constant();
                }
                break;
            case 2:
                {
                localContext = new InExpressionContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 21;
                this.identifier();
                this.state = 22;
                this.match(FiltersParser.IN);
                this.state = 23;
                this.constantArray();
                }
                break;
            case 3:
                {
                localContext = new NinExpressionContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 25;
                this.identifier();
                this.state = 29;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case FiltersParser.NOT:
                    {
                    this.state = 26;
                    this.match(FiltersParser.NOT);
                    this.state = 27;
                    this.match(FiltersParser.IN);
                    }
                    break;
                case FiltersParser.NIN:
                    {
                    this.state = 28;
                    this.match(FiltersParser.NIN);
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                this.state = 31;
                this.constantArray();
                }
                break;
            case 4:
                {
                localContext = new IsNullExpressionContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 33;
                this.identifier();
                this.state = 34;
                this.match(FiltersParser.IS);
                this.state = 35;
                this.match(FiltersParser.NULL);
                }
                break;
            case 5:
                {
                localContext = new IsNotNullExpressionContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 37;
                this.identifier();
                this.state = 38;
                this.match(FiltersParser.IS);
                this.state = 39;
                this.match(FiltersParser.NOT);
                this.state = 40;
                this.match(FiltersParser.NULL);
                }
                break;
            case 6:
                {
                localContext = new GroupExpressionContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 42;
                this.match(FiltersParser.LEFT_PARENTHESIS);
                this.state = 43;
                this.booleanExpression(0);
                this.state = 44;
                this.match(FiltersParser.RIGHT_PARENTHESIS);
                }
                break;
            case 7:
                {
                localContext = new NotExpressionContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 46;
                this.match(FiltersParser.NOT);
                this.state = 47;
                this.booleanExpression(1);
                }
                break;
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 58;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    this.state = 56;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 2, this.context) ) {
                    case 1:
                        {
                        localContext = new AndExpressionContext(new BooleanExpressionContext(parentContext, parentState));
                        (localContext as AndExpressionContext)._left = previousContext;
                        this.pushNewRecursionContext(localContext, _startState, FiltersParser.RULE_booleanExpression);
                        this.state = 50;
                        if (!(this.precpred(this.context, 4))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 4)");
                        }
                        this.state = 51;
                        (localContext as AndExpressionContext)._operator = this.match(FiltersParser.AND);
                        this.state = 52;
                        (localContext as AndExpressionContext)._right = this.booleanExpression(5);
                        }
                        break;
                    case 2:
                        {
                        localContext = new OrExpressionContext(new BooleanExpressionContext(parentContext, parentState));
                        (localContext as OrExpressionContext)._left = previousContext;
                        this.pushNewRecursionContext(localContext, _startState, FiltersParser.RULE_booleanExpression);
                        this.state = 53;
                        if (!(this.precpred(this.context, 3))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 3)");
                        }
                        this.state = 54;
                        (localContext as OrExpressionContext)._operator = this.match(FiltersParser.OR);
                        this.state = 55;
                        (localContext as OrExpressionContext)._right = this.booleanExpression(4);
                        }
                        break;
                    }
                    }
                }
                this.state = 60;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public constantArray(): ConstantArrayContext {
        let localContext = new ConstantArrayContext(this.context, this.state);
        this.enterRule(localContext, 4, FiltersParser.RULE_constantArray);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 61;
            this.match(FiltersParser.LEFT_SQUARE_BRACKETS);
            this.state = 62;
            this.constant();
            this.state = 67;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 4) {
                {
                {
                this.state = 63;
                this.match(FiltersParser.COMMA);
                this.state = 64;
                this.constant();
                }
                }
                this.state = 69;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 70;
            this.match(FiltersParser.RIGHT_SQUARE_BRACKETS);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public compare(): CompareContext {
        let localContext = new CompareContext(this.context, this.state);
        this.enterRule(localContext, 6, FiltersParser.RULE_compare);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 72;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 127488) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public identifier(): IdentifierContext {
        let localContext = new IdentifierContext(this.context, this.state);
        this.enterRule(localContext, 8, FiltersParser.RULE_identifier);
        try {
            this.state = 79;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 5, this.context) ) {
            case 1:
                localContext = new CompoundIdentifierContext(localContext);
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 74;
                this.match(FiltersParser.IDENTIFIER);
                this.state = 75;
                this.match(FiltersParser.DOT);
                this.state = 76;
                this.match(FiltersParser.IDENTIFIER);
                }
                break;
            case 2:
                localContext = new SimpleIdentifierContext(localContext);
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 77;
                this.match(FiltersParser.IDENTIFIER);
                }
                break;
            case 3:
                localContext = new QuotedIdentifierContext(localContext);
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 78;
                this.match(FiltersParser.QUOTED_STRING);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public constant(): ConstantContext {
        let localContext = new ConstantContext(this.context, this.state);
        this.enterRule(localContext, 10, FiltersParser.RULE_constant);
        let _la: number;
        try {
            this.state = 96;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 9, this.context) ) {
            case 1:
                localContext = new LongConstantContext(localContext);
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 82;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 10 || _la === 11) {
                    {
                    this.state = 81;
                    _la = this.tokenStream.LA(1);
                    if(!(_la === 10 || _la === 11)) {
                    this.errorHandler.recoverInline(this);
                    }
                    else {
                        this.errorHandler.reportMatch(this);
                        this.consume();
                    }
                    }
                }

                this.state = 84;
                this.match(FiltersParser.INTEGER_VALUE);
                this.state = 85;
                this.match(FiltersParser.LONG_SUFFIX);
                }
                break;
            case 2:
                localContext = new IntegerConstantContext(localContext);
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 87;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 10 || _la === 11) {
                    {
                    this.state = 86;
                    _la = this.tokenStream.LA(1);
                    if(!(_la === 10 || _la === 11)) {
                    this.errorHandler.recoverInline(this);
                    }
                    else {
                        this.errorHandler.reportMatch(this);
                        this.consume();
                    }
                    }
                }

                this.state = 89;
                this.match(FiltersParser.INTEGER_VALUE);
                }
                break;
            case 3:
                localContext = new DecimalConstantContext(localContext);
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 91;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 10 || _la === 11) {
                    {
                    this.state = 90;
                    _la = this.tokenStream.LA(1);
                    if(!(_la === 10 || _la === 11)) {
                    this.errorHandler.recoverInline(this);
                    }
                    else {
                        this.errorHandler.reportMatch(this);
                        this.consume();
                    }
                    }
                }

                this.state = 93;
                this.match(FiltersParser.DECIMAL_VALUE);
                }
                break;
            case 4:
                localContext = new TextConstantContext(localContext);
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 94;
                this.match(FiltersParser.QUOTED_STRING);
                }
                break;
            case 5:
                localContext = new BooleanConstantContext(localContext);
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 95;
                this.match(FiltersParser.BOOLEAN_VALUE);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public override sempred(localContext: antlr.ParserRuleContext | null, ruleIndex: number, predIndex: number): boolean {
        switch (ruleIndex) {
        case 1:
            return this.booleanExpression_sempred(localContext as BooleanExpressionContext, predIndex);
        }
        return true;
    }
    private booleanExpression_sempred(localContext: BooleanExpressionContext | null, predIndex: number): boolean {
        switch (predIndex) {
        case 0:
            return this.precpred(this.context, 4);
        case 1:
            return this.precpred(this.context, 3);
        }
        return true;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!FiltersParser.__ATN) {
            FiltersParser.__ATN = new antlr.ATNDeserializer().deserialize(FiltersParser._serializedATN);
        }

        return FiltersParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(FiltersParser.literalNames, FiltersParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return FiltersParser.vocabulary;
    }

    private static readonly decisionsToDFA = FiltersParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class WhereContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public WHERE(): antlr.TerminalNode {
        return this.getToken(FiltersParser.WHERE, 0)!;
    }
    public booleanExpression(): BooleanExpressionContext {
        return this.getRuleContext(0, BooleanExpressionContext)!;
    }
    public EOF(): antlr.TerminalNode {
        return this.getToken(FiltersParser.EOF, 0)!;
    }
    public override get ruleIndex(): number {
        return FiltersParser.RULE_where;
    }
    public override enterRule(listener: FiltersListener): void {
        if(listener.enterWhere) {
             listener.enterWhere(this);
        }
    }
    public override exitRule(listener: FiltersListener): void {
        if(listener.exitWhere) {
             listener.exitWhere(this);
        }
    }
    public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
        if (visitor.visitWhere) {
            return visitor.visitWhere(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class BooleanExpressionContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public override get ruleIndex(): number {
        return FiltersParser.RULE_booleanExpression;
    }
    public override copyFrom(ctx: BooleanExpressionContext): void {
        super.copyFrom(ctx);
    }
}
export class CompareExpressionContext extends BooleanExpressionContext {
    public constructor(ctx: BooleanExpressionContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public identifier(): IdentifierContext {
        return this.getRuleContext(0, IdentifierContext)!;
    }
    public compare(): CompareContext {
        return this.getRuleContext(0, CompareContext)!;
    }
    public constant(): ConstantContext {
        return this.getRuleContext(0, ConstantContext)!;
    }
    public override enterRule(listener: FiltersListener): void {
        if(listener.enterCompareExpression) {
             listener.enterCompareExpression(this);
        }
    }
    public override exitRule(listener: FiltersListener): void {
        if(listener.exitCompareExpression) {
             listener.exitCompareExpression(this);
        }
    }
    public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
        if (visitor.visitCompareExpression) {
            return visitor.visitCompareExpression(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class InExpressionContext extends BooleanExpressionContext {
    public constructor(ctx: BooleanExpressionContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public identifier(): IdentifierContext {
        return this.getRuleContext(0, IdentifierContext)!;
    }
    public IN(): antlr.TerminalNode {
        return this.getToken(FiltersParser.IN, 0)!;
    }
    public constantArray(): ConstantArrayContext {
        return this.getRuleContext(0, ConstantArrayContext)!;
    }
    public override enterRule(listener: FiltersListener): void {
        if(listener.enterInExpression) {
             listener.enterInExpression(this);
        }
    }
    public override exitRule(listener: FiltersListener): void {
        if(listener.exitInExpression) {
             listener.exitInExpression(this);
        }
    }
    public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
        if (visitor.visitInExpression) {
            return visitor.visitInExpression(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class NinExpressionContext extends BooleanExpressionContext {
    public constructor(ctx: BooleanExpressionContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public identifier(): IdentifierContext {
        return this.getRuleContext(0, IdentifierContext)!;
    }
    public constantArray(): ConstantArrayContext {
        return this.getRuleContext(0, ConstantArrayContext)!;
    }
    public NOT(): antlr.TerminalNode | null {
        return this.getToken(FiltersParser.NOT, 0);
    }
    public IN(): antlr.TerminalNode | null {
        return this.getToken(FiltersParser.IN, 0);
    }
    public NIN(): antlr.TerminalNode | null {
        return this.getToken(FiltersParser.NIN, 0);
    }
    public override enterRule(listener: FiltersListener): void {
        if(listener.enterNinExpression) {
             listener.enterNinExpression(this);
        }
    }
    public override exitRule(listener: FiltersListener): void {
        if(listener.exitNinExpression) {
             listener.exitNinExpression(this);
        }
    }
    public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
        if (visitor.visitNinExpression) {
            return visitor.visitNinExpression(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class IsNullExpressionContext extends BooleanExpressionContext {
    public constructor(ctx: BooleanExpressionContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public identifier(): IdentifierContext {
        return this.getRuleContext(0, IdentifierContext)!;
    }
    public IS(): antlr.TerminalNode {
        return this.getToken(FiltersParser.IS, 0)!;
    }
    public NULL(): antlr.TerminalNode {
        return this.getToken(FiltersParser.NULL, 0)!;
    }
    public override enterRule(listener: FiltersListener): void {
        if(listener.enterIsNullExpression) {
             listener.enterIsNullExpression(this);
        }
    }
    public override exitRule(listener: FiltersListener): void {
        if(listener.exitIsNullExpression) {
             listener.exitIsNullExpression(this);
        }
    }
    public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
        if (visitor.visitIsNullExpression) {
            return visitor.visitIsNullExpression(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class IsNotNullExpressionContext extends BooleanExpressionContext {
    public constructor(ctx: BooleanExpressionContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public identifier(): IdentifierContext {
        return this.getRuleContext(0, IdentifierContext)!;
    }
    public IS(): antlr.TerminalNode {
        return this.getToken(FiltersParser.IS, 0)!;
    }
    public NOT(): antlr.TerminalNode {
        return this.getToken(FiltersParser.NOT, 0)!;
    }
    public NULL(): antlr.TerminalNode {
        return this.getToken(FiltersParser.NULL, 0)!;
    }
    public override enterRule(listener: FiltersListener): void {
        if(listener.enterIsNotNullExpression) {
             listener.enterIsNotNullExpression(this);
        }
    }
    public override exitRule(listener: FiltersListener): void {
        if(listener.exitIsNotNullExpression) {
             listener.exitIsNotNullExpression(this);
        }
    }
    public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
        if (visitor.visitIsNotNullExpression) {
            return visitor.visitIsNotNullExpression(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class GroupExpressionContext extends BooleanExpressionContext {
    public constructor(ctx: BooleanExpressionContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public LEFT_PARENTHESIS(): antlr.TerminalNode {
        return this.getToken(FiltersParser.LEFT_PARENTHESIS, 0)!;
    }
    public booleanExpression(): BooleanExpressionContext {
        return this.getRuleContext(0, BooleanExpressionContext)!;
    }
    public RIGHT_PARENTHESIS(): antlr.TerminalNode {
        return this.getToken(FiltersParser.RIGHT_PARENTHESIS, 0)!;
    }
    public override enterRule(listener: FiltersListener): void {
        if(listener.enterGroupExpression) {
             listener.enterGroupExpression(this);
        }
    }
    public override exitRule(listener: FiltersListener): void {
        if(listener.exitGroupExpression) {
             listener.exitGroupExpression(this);
        }
    }
    public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
        if (visitor.visitGroupExpression) {
            return visitor.visitGroupExpression(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class NotExpressionContext extends BooleanExpressionContext {
    public constructor(ctx: BooleanExpressionContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public NOT(): antlr.TerminalNode {
        return this.getToken(FiltersParser.NOT, 0)!;
    }
    public booleanExpression(): BooleanExpressionContext {
        return this.getRuleContext(0, BooleanExpressionContext)!;
    }
    public override enterRule(listener: FiltersListener): void {
        if(listener.enterNotExpression) {
             listener.enterNotExpression(this);
        }
    }
    public override exitRule(listener: FiltersListener): void {
        if(listener.exitNotExpression) {
             listener.exitNotExpression(this);
        }
    }
    public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
        if (visitor.visitNotExpression) {
            return visitor.visitNotExpression(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class AndExpressionContext extends BooleanExpressionContext {
    public _left?: BooleanExpressionContext;
    public _operator?: Token | null;
    public _right?: BooleanExpressionContext;
    public constructor(ctx: BooleanExpressionContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public booleanExpression(): BooleanExpressionContext[];
    public booleanExpression(i: number): BooleanExpressionContext | null;
    public booleanExpression(i?: number): BooleanExpressionContext[] | BooleanExpressionContext | null {
        if (i === undefined) {
            return this.getRuleContexts(BooleanExpressionContext);
        }

        return this.getRuleContext(i, BooleanExpressionContext);
    }
    public AND(): antlr.TerminalNode {
        return this.getToken(FiltersParser.AND, 0)!;
    }
    public override enterRule(listener: FiltersListener): void {
        if(listener.enterAndExpression) {
             listener.enterAndExpression(this);
        }
    }
    public override exitRule(listener: FiltersListener): void {
        if(listener.exitAndExpression) {
             listener.exitAndExpression(this);
        }
    }
    public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
        if (visitor.visitAndExpression) {
            return visitor.visitAndExpression(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class OrExpressionContext extends BooleanExpressionContext {
    public _left?: BooleanExpressionContext;
    public _operator?: Token | null;
    public _right?: BooleanExpressionContext;
    public constructor(ctx: BooleanExpressionContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public booleanExpression(): BooleanExpressionContext[];
    public booleanExpression(i: number): BooleanExpressionContext | null;
    public booleanExpression(i?: number): BooleanExpressionContext[] | BooleanExpressionContext | null {
        if (i === undefined) {
            return this.getRuleContexts(BooleanExpressionContext);
        }

        return this.getRuleContext(i, BooleanExpressionContext);
    }
    public OR(): antlr.TerminalNode {
        return this.getToken(FiltersParser.OR, 0)!;
    }
    public override enterRule(listener: FiltersListener): void {
        if(listener.enterOrExpression) {
             listener.enterOrExpression(this);
        }
    }
    public override exitRule(listener: FiltersListener): void {
        if(listener.exitOrExpression) {
             listener.exitOrExpression(this);
        }
    }
    public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
        if (visitor.visitOrExpression) {
            return visitor.visitOrExpression(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ConstantArrayContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public LEFT_SQUARE_BRACKETS(): antlr.TerminalNode {
        return this.getToken(FiltersParser.LEFT_SQUARE_BRACKETS, 0)!;
    }
    public constant(): ConstantContext[];
    public constant(i: number): ConstantContext | null;
    public constant(i?: number): ConstantContext[] | ConstantContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ConstantContext);
        }
